# aieng

./: jenkins-test.txt
ai/fastapi/: Dockerfile  docker-compose-no-redis.yml  docker-compose.yml  env  pyproject.toml  requirements.txt  tts_key.json
ai/fastapi/Zonos/: sample.py
ai/fastapi/Zonos/zonos/: conditioning.py
ai/fastapi/app/: config.py  dependencies.py  main.py
ai/fastapi/app/db/: models.py  session.py
ai/fastapi/app/models/: song.py  word.py
ai/fastapi/app/routers/: internal.py  pronunciation.py  songs.py  words.py
ai/fastapi/app/services/: diffusion_service.py  gpt_service.py  pronunciation_service.py  sonauto_service.py  tts_service.py  tts_service_google.py  tts_service_zonos.py  word_service.py
ai/fastapi/app/utils/: logger.py  redis.py  s3.py
ai/fastapi/app/workflows/: ComfyUI_GG.json  ComfyUI_GK.json  ComfyUI_GK_fixed.json  ComfyUI_THIRD.json  ComfyUI_WK2.json  ComfyUI_WOOKGOM.json
backend/: Dockerfile
backend/aieng/: .gitignore  Dockerfile  build.gradle  settings.gradle
exec/: 아이잉 포팅 매뉴얼.md
frontend/AIENG/: .gitignore  App.tsx  README.md  Theme.ts  app.config.ts  app.json  eas.json  package-lock.json  package.json
frontend/AIENG/android/: build.gradle  gradle.properties  settings.gradle
frontend/AIENG/contexts/: AudioContext.tsx  ProfileContext.tsx
frontend/AIENG/screens/: HomeScreen.tsx  KakaoAuthCallbackScreen.tsx  LearningScreen.tsx  LoginScreen.tsx  ProfileSelectScreen.tsx  SignupScreen.tsx  SongScreen.tsx  WordcardScreen.tsx
frontend/AIENG/scripts/: build-dev.ps1  check-versions.js
(+255 files in other folders)
