[project]
name = "zonos-fastapi"
version = "0.1.0"
description = "Zonos + FastAPI integration"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "inflect>=7.5.0",
    "einops",
    "sentencepiece",
    "kanjize",
    "phonemizer",
    "sudachipy",
    "sudachidict-full",
    "transformers",
    "huggingface-hub",
    "soundfile"
]

[tool.setuptools]
packages = ["app", "Zonos"]
